--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,19 +75,28 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-<!--            <TextView-->
-<!--                android:id="@+id/kategori"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Kategori"-->
-<!--                android:textSize="30dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:fontFamily="@font/roboto_bold"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:layout_marginHorizontal="10dp"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/top"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent" />-->
+            <TextView
+                android:id="@+id/news_latest"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="News"
+                android:textSize="30dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/roboto_bold"
+                android:textColor="@color/black"
+                android:layout_marginHorizontal="10dp"
+                app:layout_constraintTop_toBottomOf="@id/top"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_news_latest"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_news_latest"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/news_latest" />
 
 <!--            <HorizontalScrollView-->
 <!--                android:id="@+id/horizontal_sv_news"-->
@@ -130,7 +139,7 @@
 <!--            </HorizontalScrollView>-->
 
             <TextView
-                android:id="@+id/news"
+                android:id="@+id/news_relevansi"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Just For You"
@@ -139,18 +148,18 @@
                 android:textColor="@color/black"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="8dp"
-                app:layout_constraintTop_toBottomOf="@id/top"
+                app:layout_constraintTop_toBottomOf="@id/rv_news_latest"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_news"
+                android:id="@+id/rv_news_relevansi"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="10dp"
-                tools:listitem="@layout/item_news"
-                app:layout_constraintTop_toBottomOf="@id/news"
+                tools:listitem="@layout/item_news_relevansi"
+                app:layout_constraintTop_toBottomOf="@id/news_relevansi"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
